// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddAssetsToNotebookForm renders correctly when a no notebook has been selected 1`] = `
<div>
  <div>
    <form
      id="submit"
    >
      <div>
        <div>
          Field: {"name":"project","label":"Project","options":[{"text":"project1","value":"project1"},{"text":"project2","value":"project2"}]}
        </div>
      </div>
      <div>
        <div>
          Field: {"disabled":false,"name":"notebook","label":"Notebook","options":[{"text":"notebook1","value":"notebook1"},{"text":"notebook2","value":"notebook2"}]}
        </div>
      </div>
      <div>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1o1pkbg-MuiTypography-root"
        >
          assetInfo
        </p>
        <div>
          Field: {"disabled":true,"name":"assets","label":"Assets","projectKey":"project1"}
        </div>
      </div>
      <div
        class="makeStyles-fromControlContainer-3"
      >
        <span
          aria-label=""
          class="makeStyles-button-4"
          data-mui-internal-clone-element="true"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-o0h1hg-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="submit"
          >
            Apply
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </span>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium makeStyles-button-4 css-i65xv2-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Reset
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`AddAssetsToNotebookForm renders correctly when a project and notebook have been selected 1`] = `
<div>
  <div>
    <form
      id="submit"
    >
      <div>
        <div>
          Field: {"name":"project","label":"Project","options":[{"text":"project1","value":"project1"},{"text":"project2","value":"project2"}]}
        </div>
      </div>
      <div>
        <div>
          Field: {"disabled":false,"name":"notebook","label":"Notebook","options":[{"text":"notebook1","value":"notebook1"},{"text":"notebook2","value":"notebook2"}]}
        </div>
      </div>
      <div>
        <div>
          Field: {"disabled":true,"placeholder":"","name":"existingAssets","label":"Existing Assets on Notebook","projectKey":"project1"}
        </div>
      </div>
      <div>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1o1pkbg-MuiTypography-root"
        >
          assetInfo
        </p>
        <div>
          Field: {"disabled":false,"name":"assets","label":"Assets","projectKey":"project1"}
        </div>
      </div>
      <div
        class="makeStyles-fromControlContainer-1"
      >
        <span
          aria-label=""
          class="makeStyles-button-2"
          data-mui-internal-clone-element="true"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-o0h1hg-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="submit"
          >
            Apply
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </span>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium makeStyles-button-2 css-i65xv2-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Reset
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </form>
  </div>
</div>
`;
